--- a/us/template/index.html
+++ b/us/template/index.html
@@ -24,25 +24,25 @@
         function drawChart() {
             var count = parseInt('{{ count }}');
             console.log(count);
-            
+
             var player = parseInt('{{ player }}');
             console.log(player);
-            
+
             var playerPercentage = (player / count) * 100;
             var totalPercentage = 100 - playerPercentage;
-    
+
             var data = google.visualization.arrayToDataTable([
                 ['Task', 'Percentage'],
                 ['', playerPercentage],
                 ['', totalPercentage],
             ]);
-    
+
             var options = {
                 is3D: true,
                 legend: 'none',
-          pieSliceText: 'none',
+                pieSliceText: 'none',
             };
-    
+
             var chart = new google.visualization.PieChart(document.getElementById('piechart_player_3d'));
             chart.draw(data, options);
         }
@@ -53,30 +53,30 @@
         function drawChart() {
             var count = parseInt('{{ count }}');
             console.log(count);
-            
+
             var player = parseInt('{{ club }}');
             console.log(player);
-            
+
             var playerPercentage = (player / count) * 100;
             var totalPercentage = 100 - playerPercentage;
-    
+
             var data = google.visualization.arrayToDataTable([
                 ['Task', 'Percentage'],
                 ['', playerPercentage],
                 ['', totalPercentage],
             ]);
-    
+
             var options = {
                 is3D: true,
                 legend: 'none',
-          pieSliceText: 'none',
+                pieSliceText: 'none',
             };
-    
+
             var chart = new google.visualization.PieChart(document.getElementById('piechart_club_3d'));
             chart.draw(data, options);
         }
     </script>
-    
+
 </head>
 
 <body class="bg-light">
@@ -103,11 +103,11 @@
                                 Users</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'RegisterScout' %}">Register Scouts</a>
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'RegisterScout' %}">Register Scouts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'email' %}">Clubs</a>
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'email' %}">Clubs</a>
                         </li>
 
                     </ul>
@@ -117,7 +117,8 @@
                         <p class="text-light "><i class="bi bi-person-circle"></i> Admin</p>
                     </div>
                     <div class="d-flex justify-content-center flex-column">
-                        <a class="d-flex flex-column justify-content-center text-decoration-none" href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                        <a class="d-flex flex-column justify-content-center text-decoration-none"
+                            href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
                     </div>
                 </div>
             </div>
@@ -205,7 +206,8 @@
                             <a class="nav-link text-secondary" aria-current="page" href="#">Scouts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'ClubPlayer' %}">Players</a>
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
                     </ul>
                 </div>
@@ -213,7 +215,8 @@
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
                         <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
                     </div>
-                    <a class="d-flex flex-column justify-content-center text-decoration-none" href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none"
+                        href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
                 </div>
             </div>
         </div>
@@ -230,14 +233,15 @@
                     <p class="text-dark mt-2 fs-4 fw-bold">{{user.club_name}}</p>
                     <p class="text-secondary">District: {{user.district}}</p>
                     <p class="text-secondary">Locality: {{user.locality}}</p>
-                    
+
                 </div>
                 <div>
                     <p>Club Reputation: <i class="bi bi-star-fill text-warning"></i><i
                             class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
                             class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
                 </div>
-                <div class="d-flex justify-content-center"><a href="{% url 'EditClub' %}"><button class="btn btn-outline-primary">Edit Profile</button></a></div>
+                <div class="d-flex justify-content-center"><a href="{% url 'EditClub' %}"><button
+                            class="btn btn-outline-primary">Edit Profile</button></a></div>
             </div>
         </div>
         <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
@@ -311,6 +315,142 @@
             </div>
         </div>
     </div>
+    {% elif user.is_scout %}
+    <nav class="navbar player-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
+                <p class="text-white">Urban</p>
+                <p class="text-warning">Scout</p>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="ms-3 d-flex w-50">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                </div>
+                <div class="ms-3">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'index' %}">Clubs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'ScoutPlayer' %}">Players</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="d-flex w-100 justify-content-start justify-content-sm-end">
+                    <div class="border rounded p-2 pb-0 mt-2 ms-3">
+                        <p class="text-light "><i class="bi bi-binoculars-fill"></i> {{user.first_name}}</p>
+                    </div>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none"
+                        href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="d-flex flex-wrap justify-content-center mt-4">
+        <div class="col-lg-3 h-50 col-12 m-3 p-5 rounded bg-white shadow-lg position-sticky">
+            <div class="">
+                <div class="d-flex justify-content-center">
+                    <div class="">
+                        <img class="rounded-circle img-width " src={{user.img.url}} alt="">
+                    </div>
+                </div>
+                <div class="text-center">
+                    <p class="text-dark mt-2 fs-4 fw-bold">{{user.first_name}} {{user.last_name}}</p>
+                    <p class="text-secondary">District: {{user.district}}</p>
+                    <p class="text-secondary">Locality: {{user.locality}}</p>
+
+                </div>
+                <div>
+                    <p class="fw-bold">UrbanScout Rating: <i class="bi bi-star-fill text-warning"></i><i
+                            class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
+                            class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                </div>
+                
+            </div>
+        </div>
+        <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
+            <div class="w-100 d-flex justify-content-center">
+                <div class="w-100">
+                    <textarea class="form-control" name="" id="" cols="30" rows="5"
+                        placeholder="Share a post"></textarea>
+                    <div class="d-flex justify-content-around m-2 mt-4">
+                        <button class="btn btn-outline-primary"><i class="bi bi-image"></i> Photo</button>
+                        <button class="btn btn-outline-success"><i class="bi bi-play-btn-fill"></i> Video</button>
+                        <button class="btn btn-outline-warning"><i class="bi bi-send-fill"></i> Post</button>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-4 border-top pt-4">
+                <div class="d-flex">
+                    <div class="feed-img">
+                        <img class="w-100 rounded-circle" src={{user.img.url}} alt="">
+                    </div>
+                    <div class="ms-2">
+                        <p class="fw-bold">
+                            {{user.first_name}} {{user.last_name}}
+                        </p>
+
+                    </div>
+                </div>
+                <div class="w-100 mt-3">
+                    <img class="w-100"
+                        src="https://images.unsplash.com/photo-1589487391730-58f20eb2c308?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Nnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80"
+                        alt="">
+                </div>
+                <div class="mt-3">
+                    <p class="fw-bold">{{user.first_name}} {{user.last_name}}
+                    <p>Retail giants like Reliance Retail, Aditya Birla Fashion & Retail, and Devyani International,
+                        among others, are on an offline expansion spree, but real estate is proving hard to come by,
+                        reports Livemint.</p>
+                    </p>
+
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-lg-3 col-12">
+            <div class="m-3 p-5 rounded bg-white shadow-lg">
+                <div>
+                    <p class="fw-bold">Recommended Clubs</p>
+                    {% for clubs in clubdata %}
+
+                    <div class="d-flex">
+                        <div class="rec-img-club">
+                            <img class="w-100 rounded-circle" src="{{clubs.img}}" alt="">
+                        </div>
+                        <p class="ms-2">{{clubs.club_name}}</p>
+                    </div>
+                    {% endfor %}
+
+
+                </div>
+            </div>
+            <div class="m-3 p-5 rounded bg-white shadow-lg">
+                <div>
+                    <p class="fw-bold">Recommended Scouts</p>
+                    {% for scouts in scout %}
+                    <div class="d-flex">
+                        <div class="rec-img-club">
+                            <img class="w-100 rounded-circle" src="{{scouts.img}}" alt="">
+                        </div>
+                        <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}}</p>
+                    </div>
+                    {% endfor %}
+
+                </div>
+            </div>
+        </div>
+    </div>
     {% elif user.is_player %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -333,7 +473,8 @@
                             <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'PlayerScout' %}">Scouts</a>
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'PlayerScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -346,7 +487,8 @@
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
                         <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
-                    <a class="d-flex flex-column justify-content-center text-decoration-none" href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
+                    <a class="d-flex flex-column justify-content-center text-decoration-none"
+                        href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
                 </div>
             </div>
         </div>
@@ -365,17 +507,17 @@
                     <script>
                         var playerDobString = "{{ user.player_dob }}";
                         console.log(playerDobString);
-                    
+
                         var dobParts;
                         var year, month, day;
-                    
+
                         if (playerDobString.includes(',')) {
                             // Format: Oct. 17, 2001
                             var months = {
                                 'Jan.': 0, 'Feb.': 1, 'March': 2, 'Apr.': 3, 'May': 4, 'June': 5,
                                 'Jul.': 6, 'Aug.': 7, 'Sept.': 8, 'Oct.': 9, 'Nov.': 10, 'Dec.': 11
                             };
-                    
+
                             dobParts = playerDobString.split(' ');
                             month = months[dobParts[0]];
                             day = parseInt(dobParts[1].replace(',', ''));
@@ -387,19 +529,19 @@
                             month = parseInt(dobParts[1]) - 1; // Months are 0-indexed in JavaScript
                             day = parseInt(dobParts[2]);
                         }
-                    
+
                         // Create a Date object from the parsed parts
                         var playerDate = new Date(year, month, day);
                         console.log(playerDate)
                         // Calculate the age based on player's date of birth
                         var today = new Date();
                         var age = today.getFullYear() - playerDate.getFullYear() - (today.getMonth() < playerDate.getMonth() || (today.getMonth() === playerDate.getMonth() && today.getDate() < playerDate.getDate()) ? 1 : 0);
-                    
+
                         // You can now use the 'age' variable for your JavaScript logic
                         console.log("Player's age is: " + age);
                         document.getElementById("age").textContent = "Age: " + age;
                     </script>
-                    
+
 
                     <p class="text-secondary">Position: {{user.player_pos}}</p>
                     <p class="text-secondary">District: {{user.district}}</p>
@@ -466,8 +608,7 @@
 
                     <div class="d-flex">
                         <div class="rec-img-club">
-                            <img class="w-100 rounded-circle"
-                                src="{{clubs.img}}" alt="">
+                            <img class="w-100 rounded-circle" src="{{clubs.img}}" alt="">
                         </div>
                         <p class="ms-2">{{clubs.club_name}}</p>
                     </div>
@@ -482,8 +623,7 @@
                     {% for scouts in scout %}
                     <div class="d-flex">
                         <div class="rec-img-club">
-                            <img class="w-100 rounded-circle"
-                                src="{{scouts.img}}" alt="">
+                            <img class="w-100 rounded-circle" src="{{scouts.img}}" alt="">
                         </div>
                         <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}}</p>
                     </div>
