--- a/us/template/club-player.html
+++ b/us/template/club-player.html
@@ -71,7 +71,9 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Accept Request</button></a>
+                    </div>
                 </div>
             </div>
             
@@ -97,7 +99,9 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Offer Contract</button></a>
+                    </div>
                 </div>
             </div>
             
@@ -123,7 +127,7 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-3">
+                    <div class="d-flex align-items-center justify-content-center col-5">
                         <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Shortlist Player</button></a>
                     </div>
                 </div>
