Finished Club Scout Interaction

--- a/us/template/index.html
+++ b/us/template/index.html
@@ -200,10 +200,10 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="#">Scouts</a>
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'ClubScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -340,7 +340,7 @@
                             <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'index' %}">Clubs</a>
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'ScoutClub' %}">Clubs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
