--- a/us/template/ScoutPlayer.html
+++ b/us/template/ScoutPlayer.html
@@ -34,7 +34,7 @@
                             <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page" href="#">Club</a>
+                            <a class="nav-link text-secondary" aria-current="page" href="{% url 'ScoutClub' %}">Club</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page" href="{% url 'ScoutPlayer' %}">Players</a>
