--- a/us/template/ScoutPlayer.html
+++ b/us/template/ScoutPlayer.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 
-                <div class="ms-3 col-lg-7 col-12">
+                <div class="ms-3 col-lg-5 col-12">
                     <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
@@ -97,8 +97,8 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-3">
-                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Shortlist Player</button></a>
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <a href="{% url 'ScoutPlayerEdit' i.id %}"><button class="btn btn-outline-primary">Scouting Report</button></a>
                     </div>
                 </div>
             </div>
