--- a/us/template/player-club.html
+++ b/us/template/player-club.html
@@ -70,7 +70,7 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <p class="text-success"><i class="bi bi-check-circle-fill"></i> You're request has been recorded, waiting for club response</p>
+                    <p class="text-warning"><i class="bi bi-hourglass-split"></i> You're request has been recorded, waiting for club response</p>
                 </div>
             </div>
             
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 
-                <div class="ms-3 col-lg-7 col-12">
+                <div class="ms-3 col-lg-5 col-12">
                     <p class="fs-2 fw-bold">{{i.club_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
@@ -95,7 +95,7 @@
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    
+                    <p class="text-success"><i class="bi bi-check-circle-fill"></i> The club is interested, waiting for club to enter contract negotiation</p>
                 </div>
             </div>
             
