--- a/us/template/ScoutPlayerEdit.html
+++ b/us/template/ScoutPlayerEdit.html
@@ -58,14 +58,14 @@
                 
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-8 col-12">
-                        {% for i in updateUser %}
-                        <div class="d-flex"><p class="fw-bold fs-3">Player Name:</p><p class="text-secondary fw-bold fs-3">{{i.first_name}} {{i.last_name}}</p></div>
+                        
+                        <div class="d-flex"><p class="fw-bold fs-3">Player Name:</p><p class="text-secondary fw-bold fs-3">{{updateUser.first_name}} {{updateUser.last_name}}</p></div>
                         
                         <div class="d-flex justify-content-center gap-2 m-5">
                             <div class="d-flex flex-column w-100">
                                 <label for="dist">Ability</label>
                                 <select class="form-control" name="ability" id="">
-                                    <option value="{{ i.player_ability }}">{{ i.player_ability }}</option>
+                                    <option value="{{ updateUser.player_ability }}">{{ updateUser.player_ability }}</option>
                                     {% for choice_value,choice in abilityChoices %}
                                     <option value="{{ choice }}">{{ choice }}</option>
                                     {% endfor %}
@@ -75,7 +75,7 @@
                             <div class="d-flex flex-column w-100">
                                 <label for="dist">Potential</label>
                                 <select class="form-control" name="potential" id="">
-                                    <option value="{{ i.player_potential }}">{{ i.player_potential }}</option>
+                                    <option value="{{ updateUser.player_potential }}">{{ updateUser.player_potential }}</option>
                                     {% for choice_value,choice in abilityChoices %}
                                     <option value="{{ choice }}">{{ choice }}</option>
                                     {% endfor %}
@@ -93,7 +93,7 @@
                         <div class="d-flex justify-content-center mt-2">
                             <button type="submit" class="btn btn-success">Update</button>
                         </div>
-                        {% endfor %}
+                        
                     </div>
                 </div>
             </form>
