--- a/us/template/ScoutClub.html
+++ b/us/template/ScoutClub.html
@@ -51,8 +51,10 @@
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
+        
         <h2 class="mt-5">Clubs shown interest</h2>
         {% for i in interested_Clubs %}
+        {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
         <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
             <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
@@ -62,23 +64,36 @@
                     </div>
                 </div>
                 
-                <div class="ms-3 col-lg-7 col-12">
+                <div class="ms-3 col-lg-5 col-12">
                     <p class="fs-2 fw-bold">{{i.club_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class=""><b>Ability: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                    <p class=""><b>Potential: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p>Club Reputation :{% with reputation=i.club_reputation %} {% for j in abilityRange %}
+                        {% if j < reputation %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <a href="{% url 'ScoutClubEdit' i.id %}"><button class="btn btn-outline-primary">Scouting Report</button></a>
+                    </div>
                 </div>
             </div>
             
         </div>
+        {% endif %}
         {% endfor %}
+        
+        
         <h2 class="mt-5">Other Clubs</h2>
         {% for i in not_interested_Clubs %}
+        {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
         <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
             <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
@@ -88,22 +103,104 @@
                     </div>
                 </div>
                 
-                <div class="ms-3 col-lg-7 col-12">
+                <div class="ms-3 col-lg-5 col-12">
                     <p class="fs-2 fw-bold">{{i.club_name}}</p>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class=""><b>Ability: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                    <p class=""><b>Potential: </b><i class="bi bi-star-fill text-warning text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p>Club Reputation :{% with reputation=i.club_reputation %} {% for j in abilityRange %}
+                        {% if j < reputation %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
                 </div>
                 
                 <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-3">
-                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Shortlist Player</button></a>
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <p class="text-warning"><i class="bi bi-hourglass-split"></i> Waiting for player to request</p>
                     </div>
                 </div>
             </div>
             
         </div>
+        {% endif %}
+        {% endfor %}
+        <h2 class="mt-5">Scouted clubs by interest</h2>
+        {% for i in interested_Clubs %}
+        {% if i.scouted_by == fullname %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-5 col-12">
+                    <p class="fs-2 fw-bold">{{i.club_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p>Club Reputation :{% with reputation=i.club_reputation %} {% for j in abilityRange %}
+                        {% if j < reputation %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <p class="text-primary"><i class="bi bi-file-earmark-bar-graph-fill"></i> You have released the scout report for this club</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        {% endif %}
+        {% endfor %}
+        <h2 class="mt-5">Scouted By You</h2>
+        {% for i in not_interested_Clubs %}
+        {% if i.scouted_by == fullname %}
+        <script>console.log("{{ i.img }}")</script>
+        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
+            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
+                <div class="d-flex align-items-center">
+                    <div class="player-scout-img">
+                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+                    </div>
+                </div>
+                
+                <div class="ms-3 col-lg-5 col-12">
+                    <p class="fs-2 fw-bold">{{i.club_name}}</p>
+                    <p class=""><b>District: </b>{{i.district}} </p>
+                    <p class=""><b>Locality </b>{{i.locality}}</p>
+                    <p>Club Reputation :{% with reputation=i.club_reputation %} {% for j in abilityRange %}
+                        {% if j < reputation %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                </div>
+                
+                <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                    <div class="d-flex align-items-center justify-content-center col-5">
+                        <p class="text-primary"><i class="bi bi-file-earmark-bar-graph-fill"></i> You have released the scout report for this Club</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        {% endif %}
         {% endfor %}
     </div>
 </body>
