--- a/us/template/index.html
+++ b/us/template/index.html
@@ -236,9 +236,18 @@
 
                 </div>
                 <div>
-                    <p>Club Reputation: <i class="bi bi-star-fill text-warning"></i><i
-                            class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
-                            class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
+                    <p>Club Reputation :{% with reputation=user.club_reputation %} {% for j in abilityRange %}
+                        {% if j < reputation %}
+                        <i class="bi bi-star-fill text-warning"></i>
+                        {% else %}
+                        <i class="bi bi-star text-warning"></i>
+                        {% endif %}
+                        {% endfor %}
+                        {% endwith %}
+                    </p>
+                            {% if user.scouted_by != '' %}
+                            <p class="fw-bold">Scouted By {{user.scouted_by}} <i class="bi bi-patch-check-fill text-primary"></i></p>
+                            {% endif %}
                 </div>
                 <div class="d-flex justify-content-center"><a href="{% url 'EditClub' %}"><button
                             class="btn btn-outline-primary">Edit Profile</button></a></div>
@@ -295,7 +304,9 @@
                         <div class="rec-img-club">
                             <img class="w-100 rounded-circle" src="{{Players.img}}" alt="">
                         </div>
-                        <p class="ms-2">{{Players.first_name}} {{Players.last_name}}</p>
+                        <p class="ms-2">{{Players.first_name}} {{Players.last_name}}{% if Players.scouted_by != '' %}
+                            <i class="bi bi-patch-check-fill text-primary"></i>
+                            {% endif %}</p></p>
                     </div>
                     {% endfor %}
 
@@ -424,14 +435,16 @@
         <div class="col-lg-3 col-12">
             <div class="m-3 p-5 rounded bg-white shadow-lg">
                 <div>
-                    <p class="fw-bold">Recommended Clubs</p>
-                    {% for clubs in clubdata %}
+                    <p class="fw-bold">Recommended Players</p>
+                    {% for Players in playerdata %}
 
                     <div class="d-flex">
                         <div class="rec-img-club">
-                            <img class="w-100 rounded-circle" src="{{clubs.img}}" alt="">
+                            <img class="w-100 rounded-circle" src="{{Players.img}}" alt="">
                         </div>
-                        <p class="ms-2">{{clubs.club_name}}</p>
+                        <p class="ms-2">{{Players.first_name}} {{Players.last_name}}{% if Players.scouted_by != '' %}
+                            <i class="bi bi-patch-check-fill text-primary"></i>
+                            {% endif %}</p></p>
                     </div>
                     {% endfor %}
 
@@ -440,18 +453,23 @@
             </div>
             <div class="m-3 p-5 rounded bg-white shadow-lg">
                 <div>
-                    <p class="fw-bold">Recommended Scouts</p>
-                    {% for scouts in scout %}
+                    <p class="fw-bold">Recommended Clubs</p>
+                    {% for clubs in clubdata %}
+
                     <div class="d-flex">
                         <div class="rec-img-club">
-                            <img class="w-100 rounded-circle" src="{{scouts.img}}" alt="">
+                            <img class="w-100 rounded-circle" src="{{clubs.img}}" alt="">
                         </div>
-                        <p class="ms-2">{{scouts.first_name}} {{scouts.last_name}}</p>
+                        <p class="ms-2">{{clubs.club_name}} {% if clubs.scouted_by != '' %}
+                            <i class="bi bi-patch-check-fill text-primary"></i>
+                            {% endif %}</p></p></p>
                     </div>
                     {% endfor %}
 
+
                 </div>
             </div>
+            
         </div>
     </div>
     {% elif user.is_player %}
